// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ctx skill output > bdk-implementer-return-contract is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-implementer-return-contract\\n\\n### Return contract\\n\\n# skills/subagent-execute-plan/references/return-contract.md\\n\\n- **Default.** Plugin text.\\n",
  "parts": [
    {
      "kind": "file",
      "source": "skills/subagent-execute-plan/references/return-contract.md"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-lint-tools is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-lint-tools\\n\\n### Project commands: lint\\n\\n- id: eslint\\n  command: pnpm lint\\n  tier: lint\\n",
  "parts": [
    {
      "kind": "tools",
      "source": "tools.lint"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-rules-architecture is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-rules-architecture\\n\\n### Rules: architecture\\n\\n- [BDK-ARCH-1] Text of BDK-ARCH-1.\\n- [BDK-ARCH-2] Text of BDK-ARCH-2.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/architecture"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-rules-code-quality is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-rules-code-quality\\n\\n### Rules: code-quality\\n\\n- [BDK-CQ-1] Text of BDK-CQ-1.\\n- [BDK-CQ-2] Text of BDK-CQ-2.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/code-quality"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-rules-design-patterns is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-rules-design-patterns\\n\\n### Rules: design-patterns\\n\\n- [BDK-DP-1] Text of BDK-DP-1.\\n- [BDK-DP-2] Text of BDK-DP-2.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/design-patterns"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-rules-languages is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-rules-languages\\n\\n### Language rules: typescript\\n\\n- [BDK-TS-1] Text of BDK-TS-1.\\n- [BDK-TS-2] Text of BDK-TS-2.\\n\\n### Language rules: react\\n\\n- [BDK-REACT-1] Text of BDK-REACT-1.\\n- [BDK-REACT-2] Text of BDK-REACT-2.\\n",
  "parts": [
    {
      "kind": "language-rules",
      "source": "rules/languages/typescript"
    },
    {
      "kind": "language-rules",
      "source": "rules/languages/react"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-rules-security is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-rules-security\\n\\n### Rules: security\\n\\n- [BDK-SEC-1] Text of BDK-SEC-1.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/security"
    }
  ]
}"
`;

exports[`ctx skill output > bdk-test-tools is unchanged 1`] = `
"{
  "content": "## BDK context: bdk-test-tools\\n\\n### Project commands: test\\n\\n- id: unit\\n  command: pnpm test:unit\\n  scoped: pnpm vitest run {files}\\n  tier: fast\\n",
  "parts": [
    {
      "kind": "tools",
      "source": "tools.test"
    }
  ]
}"
`;

exports[`ctx skill output > change is unchanged 1`] = `
"{
  "content": "## BDK context: change\\n",
  "parts": []
}"
`;

exports[`ctx skill output > cr is unchanged 1`] = `
"{
  "content": "## BDK context: cr\\n\\n### Review engine\\n\\n# skills/cr/references/review-engine.md\\n\\n- **Default.** Plugin text.\\n\\n### Report format\\n\\n# skills/cr/references/report-format.md\\n\\n- **Default.** Plugin text.\\n",
  "parts": [
    {
      "kind": "file",
      "source": "skills/cr/references/review-engine.md"
    },
    {
      "kind": "file",
      "source": "skills/cr/references/report-format.md"
    }
  ]
}"
`;

exports[`ctx skill output > create-adr is unchanged 1`] = `
"{
  "content": "## BDK context: create-adr\\n\\n### Rules: architecture\\n\\n- [BDK-ARCH-1] Text of BDK-ARCH-1.\\n- [BDK-ARCH-2] Text of BDK-ARCH-2.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/architecture"
    }
  ]
}"
`;

exports[`ctx skill output > debug is unchanged 1`] = `
"{
  "content": "## BDK context: debug\\n\\n### Project commands: test\\n\\n- id: unit\\n  command: pnpm test:unit\\n  scoped: pnpm vitest run {files}\\n  tier: fast\\n\\n### Project commands: lint\\n\\n- id: eslint\\n  command: pnpm lint\\n  tier: lint\\n",
  "parts": [
    {
      "kind": "tools",
      "source": "tools.test"
    },
    {
      "kind": "tools",
      "source": "tools.lint"
    }
  ]
}"
`;

exports[`ctx skill output > design is unchanged 1`] = `
"{
  "content": "## BDK context: design\\n\\n### Rules: architecture\\n\\n- [BDK-ARCH-1] Text of BDK-ARCH-1.\\n- [BDK-ARCH-2] Text of BDK-ARCH-2.\\n\\n### Rules: engineering-judgment\\n\\n- [BDK-EJ-1] Text of BDK-EJ-1.\\n- [BDK-EJ-2] Text of BDK-EJ-2.\\n\\n### Project rules\\n\\n- [API-1] Text of API-1. (applies: src/api/**)\\n- [NAMING-1] Text of NAMING-1.\\n\\n### Asking the user\\n\\n# fragments/decision/lavish.md\\n\\n- **Default.** Plugin text.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/architecture"
    },
    {
      "kind": "rules",
      "source": "rules/engineering-judgment"
    },
    {
      "kind": "project-rules",
      "source": ".bdk/rules"
    },
    {
      "kind": "fragment",
      "source": "fragments/decision/lavish"
    }
  ]
}"
`;

exports[`ctx skill output > execute is unchanged 1`] = `
"{
  "content": "## BDK context: execute\\n\\n### Concurrency\\n\\nRun at most 5 agents at once.\\n\\n### Asking the user\\n\\n# fragments/decision/lavish.md\\n\\n- **Default.** Plugin text.\\n",
  "parts": [
    {
      "kind": "concurrency",
      "source": "execution.concurrency"
    },
    {
      "kind": "fragment",
      "source": "fragments/decision/lavish"
    }
  ]
}"
`;

exports[`ctx skill output > plan is unchanged 1`] = `
"{
  "content": "## BDK context: plan\\n\\n### Rules: plan\\n\\n- [BDK-PL-1] Text of BDK-PL-1.\\n- [BDK-PL-2] Text of BDK-PL-2.\\n\\n### Rules: engineering-judgment\\n\\n- [BDK-EJ-1] Text of BDK-EJ-1.\\n- [BDK-EJ-2] Text of BDK-EJ-2.\\n\\n### Rules: test-quality\\n\\n- [BDK-TQ-1] Text of BDK-TQ-1.\\n- [BDK-TQ-2] Text of BDK-TQ-2.\\n\\n### Language rules: typescript\\n\\n- [BDK-TS-1] Text of BDK-TS-1.\\n- [BDK-TS-2] Text of BDK-TS-2.\\n\\n### Language rules: react\\n\\n- [BDK-REACT-1] Text of BDK-REACT-1.\\n- [BDK-REACT-2] Text of BDK-REACT-2.\\n\\n### Project rules\\n\\n- [API-1] Text of API-1. (applies: src/api/**)\\n- [NAMING-1] Text of NAMING-1.\\n\\n### Asking the user\\n\\n# fragments/decision/lavish.md\\n\\n- **Default.** Plugin text.\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/plan"
    },
    {
      "kind": "rules",
      "source": "rules/engineering-judgment"
    },
    {
      "kind": "rules",
      "source": "rules/test-quality"
    },
    {
      "kind": "language-rules",
      "source": "rules/languages/typescript"
    },
    {
      "kind": "language-rules",
      "source": "rules/languages/react"
    },
    {
      "kind": "project-rules",
      "source": ".bdk/rules"
    },
    {
      "kind": "fragment",
      "source": "fragments/decision/lavish"
    }
  ]
}"
`;

exports[`ctx skill output > pr-review is unchanged 1`] = `
"{
  "content": "## BDK context: pr-review\\n\\n### Reviewer prompt\\n\\n# skills/pr-review/references/reviewer-prompt.md\\n\\n- **Default.** Plugin text.\\n",
  "parts": [
    {
      "kind": "file",
      "source": "skills/pr-review/references/reviewer-prompt.md"
    }
  ]
}"
`;

exports[`ctx skill output > setup is unchanged 1`] = `
"{
  "content": "## BDK context: setup\\n\\n### Project commands: test\\n\\n- id: unit\\n  command: pnpm test:unit\\n  scoped: pnpm vitest run {files}\\n  tier: fast\\n\\n### Project commands: lint\\n\\n- id: eslint\\n  command: pnpm lint\\n  tier: lint\\n\\n### Project commands: build\\n\\nnone configured\\n",
  "parts": [
    {
      "kind": "tools",
      "source": "tools.test"
    },
    {
      "kind": "tools",
      "source": "tools.lint"
    },
    {
      "kind": "tools",
      "source": "tools.build"
    }
  ]
}"
`;

exports[`ctx skill output > swarm is unchanged 1`] = `
"{
  "content": "## BDK context: swarm\\n\\n### Concurrency\\n\\nRun at most 5 agents at once.\\n",
  "parts": [
    {
      "kind": "concurrency",
      "source": "execution.concurrency"
    }
  ]
}"
`;

exports[`ctx skill output > test-driven-development is unchanged 1`] = `
"{
  "content": "## BDK context: test-driven-development\\n\\n### Rules: test-quality\\n\\n- [BDK-TQ-1] Text of BDK-TQ-1.\\n- [BDK-TQ-2] Text of BDK-TQ-2.\\n\\n### Project commands: test\\n\\n- id: unit\\n  command: pnpm test:unit\\n  scoped: pnpm vitest run {files}\\n  tier: fast\\n",
  "parts": [
    {
      "kind": "rules",
      "source": "rules/test-quality"
    },
    {
      "kind": "tools",
      "source": "tools.test"
    }
  ]
}"
`;

exports[`ctx skill output > verify-design is unchanged 1`] = `
"{
  "content": "## BDK context: verify-design\\n",
  "parts": []
}"
`;

exports[`ctx skill output > verify-plan is unchanged 1`] = `
"{
  "content": "## BDK context: verify-plan\\n",
  "parts": []
}"
`;
